Bug 124963 - Table becomes excessively wide with XBL checkboxes.  r=jag, sr=hyatt.